{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 46,
  "lineage": "17ebc04a-6173-2d9f-1e11-9b1c9d020b12",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ipPOC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-005b0fd516e71e199",
            "domain": "vpc",
            "id": "eipalloc-039a1e671a0c10f2c",
            "network_interface": "eni-03ddd3e18257bb69a",
            "private_dns": "ip-10-0-1-141.ec2.internal",
            "private_ip": "10.0.1.141",
            "public_dns": "ec2-54-92-147-33.compute-1.amazonaws.com",
            "public_ip": "54.92.147.33",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:internet-gateway/igw-0f60b865eb76cf7f9",
            "id": "igw-0f60b865eb76cf7f9",
            "owner_id": "509130302659",
            "vpc_id": "vpc-0c9e0f730389f4dba"
          },
          "dependencies": [
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "techALB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/tectech-insider-ALB/13ef267c627d1b0c",
            "arn_suffix": "app/tectech-insider-ALB/13ef267c627d1b0c",
            "dns_name": "tectech-insider-ALB-587863284.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/tectech-insider-ALB/13ef267c627d1b0c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tectech-insider-ALB",
            "security_groups": [
              "sg-0c4ae23042ae26c27"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06bd42f68748eae0d"
              },
              {
                "subnet_id": "subnet-0829a0ad62d58f518"
              }
            ],
            "subnets": [
              "subnet-06bd42f68748eae0d",
              "subnet-0829a0ad62d58f518"
            ],
            "vpc_id": "vpc-0c9e0f730389f4dba",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ecsalb",
            "aws_subnet.public-subnet-us-east-1",
            "aws_subnet.public2-subnet-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listenertech",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:listener/app/tectech-insider-ALB/13ef267c627d1b0c/4cdb4056cc2de397",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/TGtech/4ebecf56a3457169",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:listener/app/tectech-insider-ALB/13ef267c627d1b0c/4cdb4056cc2de397",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/tectech-insider-ALB/13ef267c627d1b0c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.techALB",
            "aws_lb_target_group.tgtech",
            "aws_security_group.ecsalb",
            "aws_subnet.public-subnet-us-east-1",
            "aws_subnet.public2-subnet-us-east-1",
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tgtech",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/TGtech/4ebecf56a3457169",
            "arn_suffix": "targetgroup/TGtech/4ebecf56a3457169",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/TGtech/4ebecf56a3457169",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TGtech",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c9e0f730389f4dba"
          },
          "dependencies": [
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039a1e671a0c10f2c",
            "id": "nat-0772473b0ce02d2f5",
            "network_interface_id": "eni-03ddd3e18257bb69a",
            "private_ip": "10.0.1.141",
            "public_ip": "54.92.147.33",
            "subnet_id": "subnet-06bd42f68748eae0d",
            "tags": {
              "Name": "tech-NAT"
            }
          },
          "dependencies": [
            "aws_eip.ipPOC",
            "aws_internet_gateway.gw",
            "aws_subnet.public-subnet-us-east-1",
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-subnet-in-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0824f35e16cdc9f5f",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0772473b0ce02d2f5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0c9e0f730389f4dba"
          },
          "dependencies": [
            "aws_nat_gateway.gw",
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet-in-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b80cd354cacd0561",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f60b865eb76cf7f9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0c9e0f730389f4dba"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ops-subnet-in-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b71225d0756eb6bf",
            "route_table_id": "rtb-0824f35e16cdc9f5f",
            "subnet_id": "subnet-06a29df19bb301f31"
          },
          "dependencies": [
            "aws_nat_gateway.gw",
            "aws_route_table.private-subnet-in-us-east-1",
            "aws_subnet.ops-subnet-us-east-1",
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ops2-subnet-in-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d98c73015addf28c",
            "route_table_id": "rtb-0824f35e16cdc9f5f",
            "subnet_id": "subnet-006d7afddd4848ec5"
          },
          "dependencies": [
            "aws_nat_gateway.gw",
            "aws_route_table.private-subnet-in-us-east-1",
            "aws_subnet.ops2-subnet-us-east-1",
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-in-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b310475474ae6182",
            "route_table_id": "rtb-0824f35e16cdc9f5f",
            "subnet_id": "subnet-0d53d1873784f0599"
          },
          "dependencies": [
            "aws_nat_gateway.gw",
            "aws_route_table.private-subnet-in-us-east-1",
            "aws_subnet.private-subnet-us-east-1",
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2-subnet-in-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020318eb304feed6e",
            "route_table_id": "rtb-0824f35e16cdc9f5f",
            "subnet_id": "subnet-0ac7d30a12a9c6819"
          },
          "dependencies": [
            "aws_route_table.private-subnet-in-us-east-1",
            "aws_subnet.private2-subnet-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-in-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079ed43650772c480",
            "route_table_id": "rtb-0b80cd354cacd0561",
            "subnet_id": "subnet-06bd42f68748eae0d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-subnet-in-us-east-1",
            "aws_subnet.public-subnet-us-east-1",
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2-subnet-in-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c99abdb7aa54e412",
            "route_table_id": "rtb-0b80cd354cacd0561",
            "subnet_id": "subnet-0829a0ad62d58f518"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-subnet-in-us-east-1",
            "aws_subnet.public2-subnet-us-east-1",
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-0e46747ecd94587ad",
            "description": "container instance allowd Ports POC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e46747ecd94587ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c4ae23042ae26c27"
                ],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "backend-sg",
            "name_prefix": null,
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c9e0f730389f4dba"
          },
          "dependencies": [
            "aws_security_group.ecsalb",
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecsalb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-0c4ae23042ae26c27",
            "description": "container instance allowd Ports POC from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4ae23042ae26c27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "microservice-sgALB",
            "name_prefix": null,
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c9e0f730389f4dba"
          },
          "dependencies": [
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ops-subnet-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-06a29df19bb301f31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-06a29df19bb301f31",
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "vpc_id": "vpc-0c9e0f730389f4dba"
          },
          "dependencies": [
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ops2-subnet-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-006d7afddd4848ec5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-006d7afddd4848ec5",
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "vpc_id": "vpc-0c9e0f730389f4dba"
          },
          "dependencies": [
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-0d53d1873784f0599",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d53d1873784f0599",
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "vpc_id": "vpc-0c9e0f730389f4dba"
          },
          "dependencies": [
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2-subnet-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-0ac7d30a12a9c6819",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0ac7d30a12a9c6819",
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "vpc_id": "vpc-0c9e0f730389f4dba"
          },
          "dependencies": [
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-06bd42f68748eae0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06bd42f68748eae0d",
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "vpc_id": "vpc-0c9e0f730389f4dba"
          },
          "dependencies": [
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2-subnet-us-east-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-0829a0ad62d58f518",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0829a0ad62d58f518",
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "vpc_id": "vpc-0c9e0f730389f4dba"
          },
          "dependencies": [
            "aws_vpc.tech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tech",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:vpc/vpc-0c9e0f730389f4dba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053d439302ce51422",
            "default_route_table_id": "rtb-0a9a8dd913609162b",
            "default_security_group_id": "sg-097f9dd70f42e0b4f",
            "dhcp_options_id": "dopt-b99482db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c9e0f730389f4dba",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a9a8dd913609162b",
            "owner_id": "509130302659",
            "tags": {
              "Name": "tech"
            }
          }
        }
      ]
    }
  ]
}